Implemented a texture-based reconstruction image plot interface.

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -365,9 +365,19 @@ ScreenManager:
     otm_id: otm
     menu_id: sme
     plot_id: plot
-    ReconstructionPlot:
-        id: plot
+    FloatLayout:
+        canvas:
+            Color:
+                rgb: 0,0.6,0
+            Rectangle:
+                size: root.width,root.height
         size_hint: 1.0,1.0
+        MenuedReconstructionPlot:
+            id: plot
+            size: root.width,root.height
+    # ReconstructionPlot:
+    #     id: plot
+    #     size_hint: 1.0,1.0
     BoxLayout:
         orientation: "vertical"
         size_hint: None,None
@@ -380,7 +390,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.zoom_in()
+            on_press: plot.irp.zoom_in()
+            # on_press: plot.zoom_in()
         Button:
             text: "-"
             font_size: "36sp"
@@ -388,7 +399,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.zoom_out()
+            on_press: plot.irp.zoom_out()
+            # on_press: plot.zoom_out()
 
     DiameterMenu:
         id: ddm
@@ -424,9 +436,19 @@ ScreenManager:
     otm_id: otm
     menu_id: sme
     plot_id: plot
+    # FloatLayout:
+    #     canvas:
+    #         Color:
+    #             rgb: 0,0,0
+    #         Rectangle:
+    #             size: root.width,root.height
+    #     size_hint: 1.0,1.0
+    #     MenuedBaselinePlot:
+    #         id: plot
+    #         size: root.width,root.height
     BaselinesPlot:
         id: plot
-        size_hint: 1.0,1.0
+        size_hint: 1.0,1.0            
     BoxLayout:
         orientation: "vertical"
         size_hint: None,None
@@ -439,6 +461,7 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
+            # on_press: plot.ibp.zoom_in()
             on_press: plot.zoom_in()
         Button:
             text: "-"
@@ -447,6 +470,7 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
+            # on_press: plot.ibp.zoom_out()
             on_press: plot.zoom_out()
 
     DiameterMenu:
@@ -476,7 +500,7 @@ ScreenManager:
         closed_height: dp(40)+dp(15)
 
 
-# <MenuedBaselineMapPlot>:
+
 <InteractiveMapsPlot>:
     orientation: "vertical"
     ddm_id: ddm
@@ -484,7 +508,6 @@ ScreenManager:
     menu_id: sme
     plot_id: plot
     FloatLayout :
-        id: al
         canvas:
             Color:
                 rgb: 0,0,0
@@ -495,9 +518,6 @@ ScreenManager:
         MenuedBaselineMapPlot:
             id: plot
             size: root.width,root.height
-            # pos: 0.5*root.width,0.5*root.height
-            # pos_hint: {'center':(0.5*self.width,0.5*self.height)}
-            
     BoxLayout:
         orientation: "vertical"
         size_hint: None,None
