Replaced baseline map plot with kivy-based graphics.

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -515,9 +515,11 @@ ScreenManager:
                 size: root.width,root.height
                 
         size_hint: 1.0,1.0
-        MenuedBaselineMapPlot:
+        # MenuedBaselineMapPlot:
+        MenuedBaselineMapPlot_kivygraph:
             id: plot
             size: root.width,root.height
+
     BoxLayout:
         orientation: "vertical"
         size_hint: None,None
@@ -530,7 +532,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.mp.zoom_in()
+            # on_press: plot.mp.zoom_in()
+            on_press: plot.zoom_in()
         Button:
             text: "-"
             font_size: "36sp"
@@ -538,7 +541,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.mp.zoom_out()
+            # on_press: plot.mp.zoom_out()
+            on_press: plot.zoom_out()
 
 
     DiameterMenu:
