Implemented kivy-graphics version of baseline plot to reduce latency.

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -436,19 +436,19 @@ ScreenManager:
     otm_id: otm
     menu_id: sme
     plot_id: plot
-    # FloatLayout:
-    #     canvas:
-    #         Color:
-    #             rgb: 0,0,0
-    #         Rectangle:
-    #             size: root.width,root.height
-    #     size_hint: 1.0,1.0
-    #     MenuedBaselinePlot:
-    #         id: plot
-    #         size: root.width,root.height
-    BaselinesPlot:
-        id: plot
-        size_hint: 1.0,1.0            
+    FloatLayout:
+        canvas:
+            Color:
+                rgb: 0,0,0
+            Rectangle:
+                size: root.width,root.height
+        size_hint: 1.0,1.0
+        MenuedBaselinePlot:
+            id: plot
+            size: root.width,root.height
+    # BaselinesPlot:
+    #     id: plot
+    #     size_hint: 1.0,1.0            
     BoxLayout:
         orientation: "vertical"
         size_hint: None,None
@@ -461,8 +461,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            # on_press: plot.ibp.zoom_in()
-            on_press: plot.zoom_in()
+            on_press: plot.ibp.zoom_in()
+            # on_press: plot.zoom_in()
         Button:
             text: "-"
             font_size: "36sp"
@@ -470,8 +470,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            # on_press: plot.ibp.zoom_out()
-            on_press: plot.zoom_out()
+            on_press: plot.ibp.zoom_out()
+            # on_press: plot.zoom_out()
 
     DiameterMenu:
         id: ddm
