Fixed some refresh issues with the baselnes plots.

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -461,8 +461,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.ibp.zoom_in()
-            # on_press: plot.zoom_in()
+            # on_press: plot.ibp.zoom_in()
+            on_press: plot.zoom_in()
         Button:
             text: "-"
             font_size: "36sp"
@@ -470,8 +470,8 @@ ScreenManager:
             size: "40dp","40dp"
             color: 1,1,1,0.75
             background_color: 0,0,0,0
-            on_press: plot.ibp.zoom_out()
-            # on_press: plot.zoom_out()
+            # on_press: plot.ibp.zoom_out()
+            on_press: plot.zoom_out()
 
     DiameterMenu:
         id: ddm
