--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -312,34 +312,70 @@ ScreenManager:
                 pos_hint: {"center": (0.5,0.5)}
 
 
+<InteractiveTargetMap@FloatLayout>:
+    orientation: "vertical"
+    FloatLayout :
+        size_hint: 1.0,1.0
+        TargetSelectionMap :
+            id: plot
+            size: root.width,root.height
+    BoxLayout:
+        orientation: "vertical"
+        size_hint: None,None
+        size: dp(40),dp(80)
+        pos: root.width-dp(40),root.height-dp(80)
+        Button:
+            text: "+"
+            font_size: "20sp"
+            size_hint: None,None
+            size: "40dp","40dp"
+            color: 1,1,1,0.75
+            background_color: 0,0,0,0
+            on_press: plot.zoom_in()
+        Button:
+            text: "-"
+            font_size: "36sp"
+            size_hint: None,None
+            size: "40dp","40dp"
+            color: 1,1,1,0.75
+            background_color: 0,0,0,0
+            on_press: plot.zoom_out()
+
 <TargetSelectionScreen>:
     orientation: "vertical"
     TopBanner:
-    RelativeLayout:
-        SimpleTargetSelection:
-            id: ts
-            size_hint_x: 0.75
-            size_hint_y: None
-            pos_hint: {'center': (.5, .7)}
-            height: "30dp"
-            sync_height: True
-            text_autoupdate: True
-            color: 1,1,1,1
-            background_color: 0.14,0.14,0.14,0.25
-        Label:
-            size_hint_x: 0.75
-            size_hint_y: None
-            pos_hint: {'center': (0.5,0.5)}
-            height: "30dp"
-            color: 1,1,1,1
-            text: "RA: "+ts.RA_label
-        Label:
-            size_hint_x: 0.75
-            size_hint_y: None
-            pos_hint: {'center': (0.5,0.4)}
-            height: "30dp"
-            color: 1,1,1,1
-            text: "Dec: "+ts.Dec_label
+    InteractiveTargetMap:
+
+
+        
+# <TargetSelectionScreen>:
+#     orientation: "vertical"
+#     TopBanner:
+#     RelativeLayout:
+#         SimpleTargetSelection:
+#             id: ts
+#             size_hint_x: 0.75
+#             size_hint_y: None
+#             pos_hint: {'center': (.5, .7)}
+#             height: "30dp"
+#             sync_height: True
+#             text_autoupdate: True
+#             color: 1,1,1,1
+#             background_color: 0.14,0.14,0.14,0.25
+#         Label:
+#             size_hint_x: 0.75
+#             size_hint_y: None
+#             pos_hint: {'center': (0.5,0.5)}
+#             height: "30dp"
+#             color: 1,1,1,1
+#             text: "RA: "+ts.RA_label
+#         Label:
+#             size_hint_x: 0.75
+#             size_hint_y: None
+#             pos_hint: {'center': (0.5,0.4)}
+#             height: "30dp"
+#             color: 1,1,1,1
+#             text: "Dec: "+ts.Dec_label
                 
 <DataSetSelectionScreen>:
     dssp_id: dssp
