Trying except block to enable file searching, such as it is, on android and on mac

--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -385,6 +385,8 @@ ScreenManager:
         size_hint: 1,0.05    
     DataSetSelectionPage:
         id: dssp
+    Label:
+        text: dssp.path_info    
     # RelativeLayout:
     #     canvas.before:
     #         Color:
