--- a/src/ngeht.kv
+++ b/src/ngeht.kv
@@ -385,8 +385,8 @@ ScreenManager:
         size_hint: 1,0.05    
     DataSetSelectionPage:
         id: dssp
-    Label:
-        text: dssp.path_info    
+    # Label:
+    #     text: dssp.path_info    
     # RelativeLayout:
     #     canvas.before:
     #         Color:
